--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Cat Clicker</title>
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/premiumapp.js"></script>
+    <!-- <script src="js/app.js"></script> -->
 </head>
 
 <body>
