revise spagetti code to MVO structure

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <p>Pick a cat in the list and click on it see how many times she has meowed. Have fun! Meow~</p>
     </div>
     <script src="js/jquery-1.11.3.min.js"></script>
-    <script src="js/premiumapp.js"></script>
+    <script src="js/mvoapp.js"></script>
+    <!-- <script src="js/premiumapp.js"></script> -->
     <!-- <script src="js/app.js"></script> -->
 </body>
 
