rewrite the dual cat clicker

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/premiumstyle.css">
     <title>Cat Clicker</title>
 </head>
 
@@ -15,26 +14,19 @@
     <div class="content">
         <div class="controlPanel">
             <p><span class="catname">Cat</span> Meow~
-                <br>Clicked <span class="clickcount">0</span> time.</p>
+                <br>Clicked <span class="clickcount">0 </span></p>
         </div>
-        <div class="picholder">
-            <div class="catpicture">
-                <h2>CAT1</h2>
-                <img src="http://placekitten.com/g/300/400" alt="CuteCat">
-            </div>
-            <div class="catpictureDual">
-                <h2>CAT2</h2>
-                <img src="http://placekitten.com/g/300/400" alt="CuteCat">
-            </div>
+        <div class="catholder">
+
         </div>
     </div>
     <div class="footer">
         <p>Pick a cat in the list and click on it see how many times she has meowed. Have fun! Meow~</p>
     </div>
     <script src="js/jquery-1.11.3.min.js"></script>
-    <script src="js/mvoapp.js"></script>
+    <!-- <script src="js/mvoapp.js"></script> -->
     <!-- <script src="js/premiumapp.js"></script> -->
-    <!-- <script src="js/app.js"></script> -->
+    <script src="js/app.js"></script>
 </body>
 
 </html>
