--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
         <h1>Cat Clicker Is Awesome</h1>
     </div>
     <div class="content">
-        <div class="catholder">
-        </div>
-        <div class="controlPanel">
-
+        <ul id="cat-list"></ul>
+        <div id="cat">
+            <h2 id="cat-name"></h2>
+            <div id="cat-count"></div>
+            <img id="cat-img" src="" alt="cat">
         </div>
     </div>
     <div class="footer">
         <p>Pick a cat in the list and click on it see how many times she has meowed. Have fun! Meow~</p>
     </div>
     <script src="js/jquery-1.11.3.min.js"></script>
-    <!-- <script src="js/mvoapp.js"></script> -->
-    <!-- <script src="js/premiumapp.js"></script> -->
     <script src="js/app.js"></script>
 </body>
 
