--- a/index.html
+++ b/index.html
@@ -19,19 +19,23 @@
             <img id="cat-img" src="" alt="cat">
         </div>
         <button id="admin">Admin</button>
-        <form>
-            <label for="input-cat-name">Cat Name
-                <input type="text" id="input-cat-name">
-            </label><br>
-            <label for="input-cat-url">Cat URL
-                <input type="text" id="input-cat-url">
-            </label><br>
-            <label for="input-cat-count"># Clicks
-                <input type="text" id="input-cat-count">
-            </label>
-        </form>
-        <button id="save">Save</button>
-        <button id="cancel">Cancel</button>
+        <div id="ad-form">
+            <form>
+                <label for="input-cat-name">Cat Name
+                    <input type="text" id="input-cat-name">
+                </label>
+                <br>
+                <label for="input-cat-url">Cat URL
+                    <input type="text" id="input-cat-url">
+                </label>
+                <br>
+                <label for="input-cat-count"># Clicks
+                    <input type="text" id="input-cat-count">
+                </label>
+            </form>
+            <button id="save">Save</button>
+            <button id="cancel">Cancel</button>
+        </div>
     </div>
     <div class="footer">
         <p>Pick a cat in the list and click on it see how many times she has meowed. Have fun! Meow~</p>
