input new cat and display it

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <img id="cat-img" src="" alt="cat">
         </div>
         <button id="admin">Admin</button>
-        <div id="ad-form">
-            <form>
+
+            <form id="ad-form">
                 <label for="input-cat-name">Cat Name
                     <input type="text" id="input-cat-name">
                 </label>
@@ -32,10 +32,11 @@
                 <label for="input-cat-count"># Clicks
                     <input type="text" id="input-cat-count">
                 </label>
-            </form>
+
             <button id="save">Save</button>
             <button id="cancel">Cancel</button>
-        </div>
+            </form>
+
     </div>
     <div class="footer">
         <p>Pick a cat in the list and click on it see how many times she has meowed. Have fun! Meow~</p>
