implement catclicker premium pro specs

--- a/index.html
+++ b/index.html
@@ -19,24 +19,16 @@
             <img id="cat-img" src="" alt="cat">
         </div>
         <button id="admin">Admin</button>
-
-            <form id="ad-form">
-                <label for="input-cat-name">Cat Name
-                    <input type="text" id="input-cat-name">
-                </label>
-                <br>
-                <label for="input-cat-url">Cat URL
-                    <input type="text" id="input-cat-url">
-                </label>
-                <br>
-                <label for="input-cat-count"># Clicks
-                    <input type="text" id="input-cat-count">
-                </label>
-
+        <form id="ad-form">
+            Cat Name
+            <input type="text" id="input-cat-name">
+            <br> Cat URL
+            <input type="text" id="input-cat-url">
+            <br> # Clicks
+            <input type="text" id="input-cat-count">
             <button id="save">Save</button>
             <button id="cancel">Cancel</button>
-            </form>
-
+        </form>
     </div>
     <div class="footer">
         <p>Pick a cat in the list and click on it see how many times she has meowed. Have fun! Meow~</p>
